# monorelease

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  mise.toml
.aliases/: bazel
.github/actions/setup-bazel/: action.yaml
.github/actions/setup-build-env/: action.yaml
.github/workflows/: create-release-candidate.yaml  promote-release-candidate.yaml
bar-test/: .goreleaser.yaml  BUILD.bazel  main.go
baz-test/: .goreleaser.yaml  BUILD.bazel  main.go
ci/goreleaser/: build.sh  global.yaml  release_blobs.yaml
foo-test/: .goreleaser.yaml  BUILD.bazel  main.go
scripts/: before.sh  post-process-release-notes.sh
